# xtensor-numpy

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  build_wasm.sh  packaging.md  pyproject.toml
.github/workflows/: format.yml  pip.yml  wheels.yml
docs/: index.html  test_numpy.js  test_sources.js
docs/lib/: pocketpy.js  pocketpy.wasm
include/: ndarray_binding.hpp  numpy.hpp
include/Eigen/: Core  SparseCore
include/pybind11/: eigen.h
src/: main.cpp  numpy.cpp  pybind.cpp  rdp.hpp
src/pocket_numpy/: __init__.py  __main__.py
tests/: primes.py  test_numpy.cpp  test_numpy.py  test_numpy_simple.py  test_rdp.py
web/: index.html
