[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11>=2.12,<3"]
build-backend = "scikit_build_core.build"

[project]
name = "pocket_numpy"
version = "0.0.2"
description = "pocketpy with numpy"
readme = "README.md"
authors = [
  { name = "tzx", email = "dvorak4tzx@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/cubao/xtensor-numpy"

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
wheel.expand-macos-universal-tags = false

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.cibuildwheel]
build-verbosity = 1
